# chat-langchain

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy-cloud-run.yaml  langserve-openai.yaml  langserver-openai.yaml
_scripts/: evaluate_chat_langchain.py
backend/: chain.py  ingest.py  main.py
db/: chroma.sqlite3
frontend/app/: layout.tsx  providers.tsx  theme.tsx
frontend/app/components/: ChatWindow.tsx
